Added script for saving mongo db collection to csv and loading csv by spark. burnt 3 h debugging mongo db connector to spark.

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,75 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a74bc9e8",
+   "execution_count": 1,
+   "id": "36e430a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import AutoTokenizer, AutoModel\n",
-    "import torch\n",
+    "import pyspark\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml.feature import VectorAssembler, StringIndexer\n",
+    "from pyspark.ml.classification import LogisticRegression\n",
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.tuning import ParamGridBuilder, TrainValidationSplit\n",
+    "from pyspark.sql.functions import col\n",
+    "import os\n",
+    "from pyspark.sql.functions import array_join, col\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"allegro/herbert-klej-cased-tokenizer-v1\")\n",
-    "model = AutoModel.from_pretrained(\"allegro/herbert-klej-cased-v1\")\n",
-    "\n",
-    "text = \"\"\"\n",
-    "\n",
-    "Fizyka 1 - ćwiczenia \n",
-    " \n",
-    "\n",
-    " \n",
-    " Gorąco polecam \n",
-    " \n",
-    "\n",
-    " \n",
-    "Od czego by zacząć... Zajęcia gorąco polecam. Świetna prowadząca. Miła, śmieszna, pozytywnie nastawiona, rozumie studenta.  Wiele ćwiczeń minęło w atmosferze ogólnego śmiechu i żartów. Na zajęciach wyciąga do tablicy, ale nie po to żeby ośmieszać studentów czy pokazywać, że nic nie umieją, lecz po to aby czegoś się nauczyli i ewentualnie się ogarnęli. Po prostu nie ma siedzenia bezczynnie przez 1,5 h. Wstawia \" + \" i \" - \" ale nie jest to jakaś tragedia  na końcu semestru jak ma się minusa czy dwa. Na zajęcia trzeba być po prostu mniej więcej przygotowanym, żeby wiedzieć co się dzieje i nie liczyć w zadaniach z kinematyki ciepła właściwego lub jeszcze czegoś innego. Należy się też zachowywać, ale to chyba jak w stosunku do każdego. Jeśli jest się w porządku w stosunku do niej, odwdzięcza się tym samym. Co do kolokwiów to też w porządku. Nie trzeba naprawdę być wykutym jak do doktoratu. Jeśli w miarę sumiennie się pracuje i wie co się działo na ćwiczeniach, nie ma problemu z zaliczeniem. Chyba najlepsze zajęcia, które miałem w ciągu pierwszego semestru. POLECAM\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
-    "# Tokenize the review text\n",
-    "tokens = tokenizer(\n",
-    "    text,\n",
-    "    return_tensors=\"pt\",\n",
-    "    truncation=True,\n",
-    "    padding=True,\n",
-    "    max_length=512,\n",
-    ")\n",
-    "\n",
-    "# Generate vector embeddings using HerBERT\n",
-    "with torch.no_grad():\n",
-    "    outputs = model(**tokens)\n",
-    "    # Use the [CLS] token representation as the vector\n",
-    "    vector = outputs.last_hidden_state[:, 0, :].squeeze().tolist()\n",
-    "# Print the vector"
+    "def create_spark_session():\n",
+    "    spark_master_url = os.getenv(\"SPARK_MASTER_URL\", \"spark://localhost:7077\")\n",
+    "    return (\n",
+    "        SparkSession.builder.appName(\"ReviewClassification\")\n",
+    "        .config(\"spark.master\", \"local[1]\")\n",
+    "        .getOrCreate()\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "36e430a0",
+   "execution_count": 2,
+   "id": "67b6959b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/04/26 17:48:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
+   "source": [
+    "def load_data_from_csv(spark, file_path):\n",
+    "    return spark.read.csv(file_path, header=True, inferSchema=True)\n",
+    "\n",
+    "df = load_data_from_csv(create_spark_session(), \"spark/data/vectorized_reviews.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "21e13bad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "768"
+       "DataFrame[_id: string, username: string, faculty: string, year: string, opinion_weight: string, date: string, professor: string, rating: string, vote_rate: string, course: string, review: string, post_url: string, language: string, vectors: string]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e12cc620",
+   "execution_count": 4,
+   "id": "427380f4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+--------------------+--------------------+--------------+----------+------------------+------+---------+------+-------+--------+--------+-------+\n",
+      "|                 _id|            username|             faculty|                year|opinion_weight|      date|         professor|rating|vote_rate|course| review|post_url|language|vectors|\n",
+      "+--------------------+--------------------+--------------------+--------------------+--------------+----------+------------------+------+---------+------+-------+--------+--------+-------+\n",
+      "|680aab9873fce4fd2...|           Anonymous|                NULL|                NULL|             2|2013-11-24|Elżbieta Marszałek|     5|        0|  NULL|Funky  |    NULL|    NULL|   NULL|\n",
+      "|                 OK |                NULL|                NULL|                NULL|          NULL|      NULL|              NULL|  NULL|     NULL|  NULL|   NULL|    NULL|    NULL|   NULL|\n",
+      "|Prowadząca jest m...| zajęcia bezprobl...| nieobecności zaw...|                NULL|          NULL|      NULL|              NULL|  NULL|     NULL|  NULL|   NULL|    NULL|    NULL|   NULL|\n",
+      "|Układ nie jest wy...| prosty i dostoso...|                NULL|                NULL|          NULL|      NULL|              NULL|  NULL|     NULL|  NULL|   NULL|    NULL|    NULL|   NULL|\n",
+      "|           POLECAM!\"|https://polwro.co...|                  pl|[0.27727276086807...|          NULL|      NULL|              NULL|  NULL|     NULL|  NULL|   NULL|    NULL|    NULL|   NULL|\n",
+      "+--------------------+--------------------+--------------------+--------------------+--------------+----------+------------------+------+---------+------+-------+--------+--------+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(5)"
+   ]
   }
  ],
  "metadata": {
